=======

v0.5b2 (xxxx-xx-xx)
 * Call ::http::cleanup event when an error occurs in
    ::rss-synd::feed_callback.
 * Fixed an error where self closing child elements with the same tag name
    as their parents were not being parsed as intended.
 * Fixed issue #1 where a regular expression was incorrectly matching tag
    names that started with the whole name of the tag we were looking for.

v0.5b1 (2007-12-17)
-----------------
 * Optimised and cleaned up some code. The parser is now 6-8% faster now on
    my box.
 * Fixed possible infinite loop in the xml parser.
 * Somewhat fixed "charset" setting, should now work in most cases. If it
    doesn't work correctly try it without "charset".
 * Changed PUB and MSG trigger procs to be the same.


v0.4 (2007-02-08)
-----------------
 * Fixed for feeds using ' for attributes instead of ".
 * Fixed for feeds using the <!DOCTYPE> tag.
 * Fixed $state(url) bug (thanks alky).


v0.3 (2006-11-27)
-----------------
 * Added a new XML parser. should be significantly faster and more accurate.
  - The XML data is now structured internally, for quick & easy access.
  - CDATA is now handled correctly.
 * Added support for HTTPS. Requires: TLS package, http://www.sensus.org/tcl/
 * Added support for basic HTTP authorisation. Requires: base64 package from
    tcllib, http://tcllib.sourceforge.net/
 * Added support for compressed (gzipped) feeds. Requires: Trf package,
    http://tcltrf.sourceforge.net/
 * Added public & private triggers.
 * Added multi-lined output, just use \n.
 * Added decoding of hexadecimal HTML elements.
 * Fixed trigger announcing updates to all channels, rather than just the one
    it was triggered from.
 * Fixed pub_trigger proc which wrongly matched text containing wildcards with
    triggers.
 * Fixed double encoded elements, for example: &amp;amp; will now be properly
    decoded.
 * Changed the default order of output when more than one new item is to be